
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>
        <TextView

            android:text="@string/topping"
            style="@style/HeaderTextStyle"
            />
        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="24dp"
            android:textSize="16sp"/>
        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="24dp"
            android:textSize="16sp"/>
        <TextView

            android:text="@string/Quantity"
            style="@style/HeaderTextStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="419dp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="99"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:orientation="horizontal"
                android:text="+"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="419dp" />
        </LinearLayout>



        <Button
            android:id="@+id/d.quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            tools:layout_editor_absoluteX="79dp"
            tools:layout_editor_absoluteY="419dp" />

    </LinearLayout>
</ScrollView>
